fixed alignment of form on contact page in CSS

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -309,7 +309,7 @@ height: max-content;
   width: fit-content;
   background-color: rgb(188,205,90);
   padding: 2rem;
-  margin-left: 20%;
+  margin-left: 28%;
 }
 
 form{
